# data-factory

./: .gitignore  README.md  package.json
.claude/: CLAUDE.md
apps/forge-web/: package-lock.json  package.json
apps/forge-web/app/: globals.css  layout.tsx  page.tsx
apps/forge-web/components/: Dashboard.tsx  DatasetStats.tsx  FileViewer.tsx  GateBlockingModal.tsx  GateStatus.tsx  ModelMetrics.tsx  NewProjectWizard.tsx  StepDetail.tsx  StepTimeline.tsx  TrainingProgress.tsx
apps/forge-web/lib/: gates.ts  state-manager.ts  workflow-executor.ts  workflow.ts
docs/prompts/training/: training-runner.md
docs/research-system/: data-scarcity-score.md
docs/tech-system/: package-research.md  unsloth-finetuning.md
factory/schemas/: annotation.schema.json  model-card.schema.json  training-config.schema.json  training-data.schema.json
factory/templates/project-template/: .gitkeep-dirs
factory/templates/project-template/.factory/: config.json  (+2 more)
projects/ellembelle-education/.factory/: config.json  data-manifest.json  state.json
projects/ellembelle-education/docs/: data-governance.md  data-sources.md  domain-brief.md
projects/gemma-lab/: HANDOFF_INSTRUCTIONS.md  analyst_notes_nhis.md  analyst_prompt.md  data_doctor.py  finetune.py  gemma_trainer.ipynb  generate_synthetic_claims.py  generated_strategy_report.md  load_model.py  prepare_data.py  pyproject.toml  research_dossier.txt  research_intake.py  strategic_analyst.py
projects/gemma-lab/data/: data.b64  raw_claims.jsonl  training_data.jsonl
scripts/: check-gates.js  create-project.js  validate-dataset.js
(+14 files in other folders)
